--- a/css/styles.css
+++ b/css/styles.css
@@ -476,4 +476,31 @@ letter-spacing: 0.02em;
 .icon-social{
     fill: #f4f4fd;
 }
-/*?----------------------FINISH MODUL 2------------------------*/
+/*?----------------------MODAL WINDOW------------------------*/
+.backdrop{
+    position:fixed;
+    width:100%;
+    height:100%;
+    background-color:(rgba(46, 47, 66, 0.40));
+    top:0;
+    left:0;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+}
+.is-open {
+    opacity: 1;
+    visibility: visible;
+    pointer-events: auto;
+}
+.modal{
+    width:408px;
+    height:584px;
+    background-color: #FCFCFC;
+    border-radius:4px;
+    position:absolute;
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%);
+    padding:24px;
+}
