--- a/css/styles.css
+++ b/css/styles.css
@@ -23,6 +23,14 @@ img {
     display: block;
     max-width: 100%;
 }
+input{
+    font-family:inherit;
+}
+button {
+	font-family: inherit;
+	color: currentColor;
+    cursor: pointer;
+}
 
 .container{
 padding-left: 15px; 
@@ -48,10 +56,12 @@ margin: 0 auto;
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
         0px 1px 1px rgba(46, 47, 66, 0.16),
         0px 1px 6px rgba(46, 47, 66, 0.08);
+        
 }
 .header-container{
     display: flex;
     justify-content: space-between;
+
 }
 .header-navigation {
     display: flex;
@@ -110,8 +120,18 @@ margin: 0 auto;
     font-style: normal;
     display: flex;
     align-items: center;
+    margin-top:24px;
 }
-
+.adress-menu-link {
+    color: #434455;
+    position: relative;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
 .adress-menu-item::after {
     content: "";
     position: absolute;
@@ -120,16 +140,6 @@ margin: 0 auto;
     height: 4px;
     background-color: #404bbf;
     border-radius: 2px;
-}
-.adress-menu-link {
-    color: #434455;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    display: block;
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adress-menu-link:hover, .adress-menu-link:focus,.address-menu-link:active{
     color: #404bbf;     
@@ -440,7 +450,7 @@ letter-spacing: 0.02em;
     font-size: 16px;
     max-width: 264px;
 }
-.social-media-p{
+.footer-social-media-p{
     font-weight: 500;
     font-size: 16px;
     line-height: 1.5;
@@ -476,6 +486,24 @@ letter-spacing: 0.02em;
 .icon-social{
     fill: #f4f4fd;
 }
+.footer-wrapper-subscribe{
+
+}
+.footer-wrapper-subscribe-p{
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #FFFFFF;
+    margin: 0;
+    margin-bottom: 16px;
+    max-width: 100%;
+    max-padding:100%;
+    display: flex;
+    align-items: baseline;
+}
+.modal-email{
+}
 /*?----------------------MODAL WINDOW------------------------*/
 .backdrop{
     position:fixed;
@@ -503,4 +531,11 @@ letter-spacing: 0.02em;
     left:50%;
     transform: translate(-50%, -50%);
     padding:24px;
+}
+::placeholder{
+color:rgba(46, 47, 66, 0.40);
+font-family: Roboto;
+font-size: 12px;
+line-height: 1.12;
+letter-spacing: 0.04em;
 }
