--- a/css/styles.css
+++ b/css/styles.css
@@ -3,20 +3,20 @@ color: #434455;
 font-family:'Roboto',sans-serif;
 }
 
+
 p,h1,h2,h3,h4,h5,h6{
-margin-top:0;
-margin-bottom:0;
+margin:0;
 }
 
 ul{
 list-style:none;
-margin-top:0;
-margin-bottom:0;
+margin:0;
 padding-left:0;
 }
 
 a{
 text-decoration:none;
+color: #2e2f42;
 }
 
 img{
@@ -35,8 +35,7 @@ cursor:pointer;
 }
 
 .container{
-padding-left:15px;
-padding-right:15px;
+padding:0 15px;
 width:1158px;
 margin:0 auto;
 }
@@ -441,15 +440,15 @@ background-color:#404bbf;
 
 /*?------------------------FOOTER--------------------------*/
 
-.footer{
+.footer-container{
 background-color:#2E2F42;
 padding:100px 0; 
 }
 
-.footer-container{
-max-width:100%;
-display:flex;
-align-items:center;
+.footer-container .container{
+display: flex;
+flex-direction: row;
+align-items: baseline;
 }
 
 .footer-container-logo{
@@ -470,7 +469,6 @@ margin-bottom:16px;
 
 .footer-logo-white{
 color:#f4f4fd;
-margin-bottom:17.5px;
 }
 
 .footer-text{
@@ -478,10 +476,10 @@ color:#f4f4fd;
 line-height:1.5;
 letter-spacing:0.02em;
 font-size:16px;
+width: 264px;
 }
 
 .footer-wrapper-social-media{
-margin-right: 120px
 }
 
 .footer-social-media-p{
@@ -490,20 +488,19 @@ font-size:16px;
 line-height:1.5;
 letter-spacing:0.02em;
 color:#FFFFFF;
-margin:0;
 margin-bottom:16px;
 }
 
 .social-icon-footer{
 display:flex;
 justify-content:center;
-padding:0;
 gap:16px;
 }
 
 .social-icon-li{
 width:40px;
 height:40px;
+fill:none;
 }
 
 .social-link-li{
@@ -526,6 +523,10 @@ background-color:#31d0aa;
 fill: #f4f4fd;
 }
 
+.footer-wrapper-social-media{
+margin-right: 80px;
+}
+
 .footer-wrapper-subscribe{
 margin: 0;
 margin-bottom: 16px;
@@ -537,14 +538,12 @@ font-size:16px;
 line-height:1.5;
 letter-spacing:0.02em;
 color:#FFFFFF;
-margin:0;
 margin-bottom:16px;
 }
 
 .footer-form{
-max-width:100%;
+gap:24px;
 display:flex;
-align-items:center;
 }
 
 .footer-input{
@@ -554,35 +553,31 @@ border-radius: 4px;
 background-color: transparent;
 border: 1px solid #FFF;
 box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-
+font-size: 12px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+padding-left: 16px;
+color: #ffffff;
+outline: none;
 }
 
 .footer-input::placeholder{
-color:rgba(46, 47, 66, 0.40);
-font-size:12px;
-line-height:1.12;
-letter-spacing:0.04em;
-color: var(--WHITE, #FFF);
-font-family: Roboto;
-font-size: 12px;
-font-style: normal;
-font-weight: 400;
-line-height: 24px; /* 200% */
-letter-spacing: 0.48px;
-
+color:#FFF;
 }
 
 .footer-btn{
 color:#FFF;
+font-family: "Roboto", sans-serif;
+font-weight: 500;
 padding:8px 24px;
 justify-content:center;
 align-items:center;
-gap:16px;
-display:inline-flex;
+font-size: 16px;
+display:flex;
 border-radius:4px;
 background:#4D5AE5;
-box-shadow:0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-margin:0 auto;
+line-height: 1.5;
+letter-spacing: 0.04em;
 min-width:165px;
 height:40px;
 border:0;
@@ -590,45 +585,94 @@ transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-btn:hover, .footer-btn:focus,.footer-btn:active{
-background-color:#404bbf;
+background-color:#31d0aa;
 }
 
-.modal-email{
-flex-shrink:0;
-box-shadow:0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-background:#2E2F42
+.subscribe-icon{
+    margin-left:16px;
 }
+
 
 /*?----------------------MODAL WINDOW------------------------*/
 
 .backdrop{
 position:fixed;
-width:100%;
-height:100%;
-background-color:(rgba(46, 47, 66, 0.40));
+width: 100%;
+height: 100%;
+background-color:rgba(46, 47, 66, 0.40);
 top:0;
 left:0;
-opacity:0;
-visibility:hidden;
-ointer-events:none;
-}
-
-.is-open{
-opacity:1;
-visibility:visible;
-pointer-events:auto;
 }
 
 .modal{
-width:408px;
-height:584px;
-background-color: #FCFCFC;
-border-radius:4px;
+width: 408px;
+min-height: 584px;
+background-color:#FCFCFC;
+border-radius: 4px;
 position:absolute;
-top:50%;
-left:50%;
-transform:translate(-50%, -50%);
-padding:24px;
+top: 50%;
+left: 50%;
+transform:translate(-50%,-50%) scale(1);
+padding: 72px 24px 24px 24px;
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
+.modal-btn{
+width: 24px;
+height: 24px;
+border-radius: 50%;
+position: absolute;
+top: 24px;
+right: 24px;
+background-color: #e7e9fc;
+border: 1px solid rgba(0, 0, 0, 0.1);
+cursor: pointer;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+display: flex;
+align-items: center;
+justify-content: center;
+}
 
+.modal-btn-icon{
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn:hover,
+.modal-btn:focus {
+background-color: #404bbf;
+border: none;
+}
+
+.modal-btn:hover .modal-btn-icon,
+.modal-btn:focus .modal-btn-icon{
+fill: #fff;
+}
+
+.modal-title{
+color:#2E2F42;
+text-align: center;
+font-size: 16px;
+font-weight: 500;
+line-height: 1.5;
+letter-spacing: 0.02em;
+margin-bottom:16px;
+}
+
+.modal-form{
+}
+
+.modal-input{
+width:100%;
+height:40px;
+border-radius: 4px;
+border: 1px solid  rgba(46, 47, 66, 0.40);
+border-radius: 4px;
+margin-bottom:26px;
+}
+
+.modal-info{
+
+}
