--- a/css/styles.css
+++ b/css/styles.css
@@ -49,7 +49,6 @@ border:0;
 padding:0;
 white-space:nowrap;
 clip-path:inset(100%);
-clip:ect(0 0 0 0);
 overflow:hidden;
 }
 
@@ -232,7 +231,7 @@ padding-bottom:8px;
 .strength-item-text{
 font-size:16px;
 line-height:1.5;
-etter-spacing:0.02em;
+letter-spacing:0.02em;
 }
 
 .wrapper-strength-icon{
@@ -348,9 +347,6 @@ display:flex;
 flex-wrap:wrap;
 column-gap:24px;
 row-gap:48px;
-margin:0;
-padding:0;
-ustify-content:center;
 }
 
 .portfolio-list-item{
@@ -549,16 +545,16 @@ display:flex;
 .footer-input{
 width:264px;
 height:40px;
-border-radius: 4px;
+border-radius:4px;
 background-color: transparent;
-border: 1px solid #FFF;
-box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
-font-size: 12px;
-line-height: 1.5;
-letter-spacing: 0.04em;
-padding-left: 16px;
+border:1px solid #FFF;
+box-shadow:0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+font-size:12px;
+line-height:1.5;
+letter-spacing:0.04em;
+padding-left:16px;
 color: #ffffff;
-outline: none;
+outline:none;
 }
 
 .footer-input::placeholder{
@@ -567,17 +563,17 @@ color:#FFF;
 
 .footer-btn{
 color:#FFF;
-font-family: "Roboto", sans-serif;
-font-weight: 500;
+font-family:"Roboto",sans-serif;
+font-weight:500;
 padding:8px 24px;
 justify-content:center;
 align-items:center;
-font-size: 16px;
+font-size:16px;
 display:flex;
 border-radius:4px;
 background:#4D5AE5;
-line-height: 1.5;
-letter-spacing: 0.04em;
+line-height:1.5;
+letter-spacing:0.04em;
 min-width:165px;
 height:40px;
 border:0;
@@ -589,61 +585,63 @@ background-color:#31d0aa;
 }
 
 .subscribe-icon{
-    margin-left:16px;
+margin-left:16px;
 }
-
 
 /*?----------------------MODAL WINDOW------------------------*/
 
 .backdrop{
 position:fixed;
-width: 100%;
-height: 100%;
+width:100%;
+height:100%;
 background-color:rgba(46, 47, 66, 0.40);
 top:0;
 left:0;
+opacity:0;
+visibility:inherit;
+pointer-events:none;
 }
 
 .modal{
-width: 408px;
-min-height: 584px;
+width:408px;
+min-height:584px;
 background-color:#FCFCFC;
-border-radius: 4px;
+border-radius:4px;
 position:absolute;
-top: 50%;
-left: 50%;
+top:50%;
+left:50%;
 transform:translate(-50%,-50%) scale(1);
-padding: 72px 24px 24px 24px;
-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+padding:72px 24px 24px 24px;
+box-shadow:0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+0px 2px 1px rgba(0, 0, 0, 0.2);
+transition:transform 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 }
 
 .modal-btn{
-width: 24px;
-height: 24px;
-border-radius: 50%;
-position: absolute;
-top: 24px;
-right: 24px;
-background-color: #e7e9fc;
-border: 1px solid rgba(0, 0, 0, 0.1);
-cursor: pointer;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+width:24px;
+height:24px;
+border-radius:50%;
+position:absolute;
+top:24px;
+right:24px;
+background-color:#e7e9fc;
+border:1px solid rgba(0, 0, 0, 0.1);
+cursor:pointer;
+transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-display: flex;
-align-items: center;
-justify-content: center;
-}
-
-.modal-btn-icon{
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+display:flex;
+align-items:center;
+justify-content:center;
 }
 
 .modal-btn:hover,
 .modal-btn:focus {
-background-color: #404bbf;
-border: none;
+background-color:#404bbf;
+border:none;
+}
+
+.modal-btn-icon{
+transition:fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-btn:hover .modal-btn-icon,
@@ -653,26 +651,139 @@ fill: #fff;
 
 .modal-title{
 color:#2E2F42;
-text-align: center;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.02em;
+text-align:center;
+font-size:16px;
+font-weight:500;
+line-height:1.5;
+letter-spacing:0.02em;
 margin-bottom:16px;
 }
 
-.modal-form{
-}
 
 .modal-info{
+margin-bottom:8px;
+position:relative;
+}
+
+.modal-label{
+color:#8E8F99;
+font-size:12px;
+line-height:1.17;
+letter-spacing:0.02em;
+display:flex;
+align-items:center;
+margin-bottom:4px;
 }
 
 .modal-input{
 width:100%;
 height:40px;
-border-radius: 4px;
-border: 1px solid  rgba(46, 47, 66, 0.40);
-border-radius: 4px;
-margin-bottom:26px;
+border-radius:4px;
+border:1px solid  rgba(46, 47, 66, 0.40);
+border-radius:4px;
+background-color:transparent;
+padding-left:38px;
+outline:transparent;
+transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-input:focus{
+border-color:#4d5ae5;
+}
+
+.modal-input:focus + .modal-icon{
+fill: #4d5ae5;
+}
+
+.modal-icon{
+position:absolute;
+left:16px;
+top:50%;
+transition:fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-text{
+width:100%;
+height:120px;
+border-radius:4px;
+border:1px solid  rgba(46, 47, 66, 0.40);
+background-color:transparent;
+padding:8px 16px;
+outline:transparent;
+transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+resize:none;
+}
+
+.modal-text:focus{
+border-color:#4d5ae5;
+}
+
+.modal-text:focus{
+fill:#4d5ae5;
+}
+
+.is-open{
+opacity:1;
+visibility:visible;
+pointer-events:auto;
+}
+
+.check-text{
+font-size:12px;
+line-height:1.17;
+letter-spacing:0.02em;
+color:#8E8F99;
+}
+
+.check-text a{
+color:#4D5AE5;
+font-size:12px;
+line-height:1.33;
+letter-spacing:0.02em;
+text-decoration: underline;
+}
+
+.check-text span{
+display:flex;
+width: 16px;
+height: 16px;
+border-radius:2px;
+border:1px solid rgba(46, 47, 66, 0.40);
+margin-right:8px;
+fill:transparent; 
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-chek-icon{ 
+position:absolute;
+
+}
+
+.check-input:checked + .check-text span{
+background-color:#404BBF;
+border:none;
+fill:#F4F4FD;
+}
+
+.input-btn{
+color:#FFF;
+font-family:"Roboto",sans-serif;
+font-weight:500;
+display:block;
+margin:0 auto;
+justify-content:center;
+align-items:center;
+font-size:16px;
+border-radius:4px;
+background:#4D5AE5;
+line-height:1.5;
+letter-spacing:0.05em;
+min-width:169px;
+height:56px;
+border:0;
+transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+box-shadow:0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
