--- a/css/styles.css
+++ b/css/styles.css
@@ -555,6 +555,7 @@ letter-spacing:0.04em;
 padding-left:16px;
 color: #ffffff;
 outline:none;
+filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15))
 }
 
 .footer-input::placeholder{
@@ -597,9 +598,8 @@ height:100%;
 background-color:rgba(46, 47, 66, 0.40);
 top:0;
 left:0;
-opacity:0;
-visibility:inherit;
 pointer-events:none;
+transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 
 .modal{
@@ -629,6 +629,7 @@ border:1px solid rgba(0, 0, 0, 0.1);
 cursor:pointer;
 transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+padding: 0;
 display:flex;
 align-items:center;
 justify-content:center;
@@ -661,7 +662,7 @@ margin-bottom:16px;
 
 
 .modal-info{
-margin-bottom:8px;
+margin-bottom:16px;
 position:relative;
 }
 
@@ -669,10 +670,11 @@ position:relative;
 color:#8E8F99;
 font-size:12px;
 line-height:1.17;
-letter-spacing:0.02em;
+letter-spacing:0.04em;
 display:flex;
 align-items:center;
 margin-bottom:4px;
+display: block;
 }
 
 .modal-input{
@@ -691,15 +693,19 @@ transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 border-color:#4d5ae5;
 }
 
+.modal-icon{
+position:absolute;
+left:16px;
+top:29px;
+transition:fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .modal-input:focus + .modal-icon{
 fill: #4d5ae5;
 }
 
-.modal-icon{
-position:absolute;
-left:16px;
-top:50%;
-transition:fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+.modal-info-com{
+margin-bottom: 16px;
 }
 
 .modal-text{
@@ -707,10 +713,14 @@ width:100%;
 height:120px;
 border-radius:4px;
 border:1px solid  rgba(46, 47, 66, 0.40);
-background-color:transparent;
 padding:8px 16px;
 outline:transparent;
 transition:border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+background-color:transparent;
 resize:none;
 }
 
@@ -718,8 +728,8 @@ resize:none;
 border-color:#4d5ae5;
 }
 
-.modal-text:focus{
-fill:#4d5ae5;
+.modal-info-check{
+margin-bottom: 24px;
 }
 
 .is-open{
@@ -731,40 +741,42 @@ pointer-events:auto;
 .check-text{
 font-size:12px;
 line-height:1.17;
-letter-spacing:0.02em;
+letter-spacing:0.04em;
 color:#8E8F99;
 }
 
-.check-text a{
+.modal-check-link{
 color:#4D5AE5;
 font-size:12px;
 line-height:1.33;
-letter-spacing:0.02em;
+letter-spacing:0.04em;
 text-decoration: underline;
+cursor:pointer;
 }
 
-.check-text span{
-display:flex;
+.span{
+display:inline-flex;
+align-items: center;
+justify-content: center; 
 width: 16px;
 height: 16px;
 border-radius:2px;
 border:1px solid rgba(46, 47, 66, 0.40);
 margin-right:8px;
+letter-spacing: 0.04em;
 fill:transparent; 
 transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
 border 250ms cubic-bezier(0.4, 0, 0.2, 1),
 fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-chek-icon{ 
-position:absolute;
-
+.check-input:checked + .check-text > .span{
+background-color: #404bbf;
+border: none;
+fill: #f4f4fd;
 }
 
-.check-input:checked + .check-text span{
-background-color:#404BBF;
-border:none;
-fill:#F4F4FD;
+.modal-chek-icon{ 
 }
 
 .input-btn{
@@ -779,7 +791,7 @@ font-size:16px;
 border-radius:4px;
 background:#4D5AE5;
 line-height:1.5;
-letter-spacing:0.05em;
+letter-spacing:0.04em;
 min-width:169px;
 height:56px;
 border:0;
