--- a/css/styles.css
+++ b/css/styles.css
@@ -660,10 +660,13 @@ letter-spacing:0.02em;
 margin-bottom:16px;
 }
 
-
 .modal-info{
-margin-bottom:16px;
+margin-bottom:8px;
 position:relative;
+}
+
+.modal-input-wrap{
+position: relative;
 }
 
 .modal-label{
@@ -696,7 +699,8 @@ border-color:#4d5ae5;
 .modal-icon{
 position:absolute;
 left:16px;
-top:29px;
+top:50%;
+transform: translateY(-50%);
 transition:fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
